--- a/Todo_Proj/README.html
+++ b/Todo_Proj/README.html
@@ -1,1 +1,21 @@
-# sup
+<h1 class="mb-4"><b>About</b></h1>
+    <div>
+        <h4 class="mb-4">This was my first experience building an app in Django. I followed a tutorial from youtuber "techwithtim."</h4>
+        <h4 class="mb-2">Below are some key features of the site:</h4>
+        <ul>
+            <li>User login/logout and registration system.</li>
+            <li>User-specific page access</li>
+            <li>Ability to create and edit todo lists</li>
+            <li>Sidebar for navigation</li>
+            <li>Crispy forms formatting</li>
+        </ul>
+    </div>
+
+    <div>
+        <h4 class="mt-2"><u>Funny story:</u></h4>
+        <p> I went through the tutorial twice. On the first try, I quit at the end because I was getting an error when trying to create a new todo list. It was saying the list was referenced before creation. I couldn't figure it out.</p>
+
+        <p>I restart. By the time I get to the end, I had started and completed my <a href="https://github.com/lukekulak/Portfolio/tree/main/Blog_Proj"><b>blog project</b></a>. Again, at the end, I go to create a new list and get the same error. I quickly figure out it's because the form has a checkbox BooleanField which I did not change the default value to <i>"required=False."</i></p>
+
+        <p>I laugh and immediately text my girlfriend about it since she saw the frustration I had the first time. I'm just happy I was able to debug that  oversight rather quickly, instead of hitting a complete wall like my first go-around :)</p>
+    </div>
